--- a/Energy.App.Standalone/Features/Setup/SetupPage.razor
+++ b/Energy.App.Standalone/Features/Setup/SetupPage.razor
@@ -45,7 +45,7 @@
                     }
                 </div>
                 <DocTooltipIcon DocSnippetHeader="Lock App & Setup Data"
-                                DocSnippetType="DocSnippetType.ManualActionsLockData"
+                                DocSnippetType="@DocSnippetType.LockingData"
                                 IconTitle="Lock the app and secure your Setup Data, with a password and your IHD MAC ID" />
                 <LockStorageDialog @bind-Open="@_showLockStorageDialog" />
                 <UnlockStorageDialog @bind-Open="@_showUnlockStorageDialog" />
